syntax = "proto3";

package request;

option go_package = "{{[ .Project ]}}/contracts/request";

// A request by name.
message ByName {
  // Specified name.
  string name = 1;
}

// A request by ID.
message ByID {
  // Specified ID.
  string id = 1;
}
